<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sumasaciertos"
    tools:context=".Sumas">

    <Button
        android:id="@+id/btnsum2"
        android:layout_width="117dp"
        android:layout_height="81dp"
        android:layout_marginBottom="80dp"
        android:text="@string/btnsum2"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#000000"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnsum3"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toEndOf="@+id/btnsum1" />

    <Button
        android:id="@+id/btnevaluar"
        android:layout_width="105dp"
        android:layout_height="63dp"
        android:text="@string/btnevaluar2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.979" />

    <Button
        android:id="@+id/btnsum3"
        android:layout_width="116dp"
        android:layout_height="77dp"
        android:text="@string/btnsum3"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#070707"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.815"
        app:layout_constraintStart_toEndOf="@+id/btnsum1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.772" />

    <Button
        android:id="@+id/btnsum1"
        android:layout_width="114dp"
        android:layout_height="78dp"
        android:text="@string/btnsum1"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#040404"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.772" />

    <TextView
        android:id="@+id/cuadro2"
        android:layout_width="75dp"
        android:layout_height="76dp"
        android:text="@string/cuadro2"
        android:textColor="#0B0B0B"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.227" />

    <TextView
        android:id="@+id/cuadro1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cuadro1"
        android:textColor="#1C1C1C"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.228" />

    <TextView
        android:id="@+id/resultado1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/res1"
        android:textColor="#151515"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.223" />

    <ImageView
        android:id="@+id/iv_vidas"
        android:layout_width="135dp"
        android:layout_height="54dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.428"
        app:srcCompat="@drawable/tresvidas" />

    <ImageView
        android:id="@+id/iv_aciertos"
        android:layout_width="125dp"
        android:layout_height="53dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.568"
        app:srcCompat="@drawable/sinaciertost" />

</androidx.constraintlayout.widget.ConstraintLayout>